# demos-authprod

./: docker-compose.yml  pyproject.toml  requirements.txt
drf_api_permissions_postgres/: settings.py  urls.py
kit/: views.py
